--- a/project.Rmd
+++ b/project.Rmd
@@ -31,19 +31,20 @@ library(kableExtra)
 
 # Summary of results
 
-The goal of this analysis is to investigate the integration profile of a gene therapy vector for cystinosis in 
-both mouse and human subjects and assess potential clonal expansions. The list of human oncogenes used throughout 
+The goal of this analysis is to investigate the integration profile of a gene therapy vector for the correction of cystinosis 
+in both mouse and human subjects and assess potential clonal expansions. The list of human oncogenes used throughout 
 this analysis was compiled from the literature ([link](http://www.bushmanlab.org/assets/doc/allOnco_Feb2017.tsv)) 
-and the list of mouse oncogenes was compiled from the retroviral tagged cancer gene database (RTCGD) ^1^ using an 
+and the list of mouse oncogenes was compiled from the retroviral tagged cancer gene database (RTCGD)^1^ using an 
 inclusion threshold of three or more incidents. The human oncogene list comprises `r humanGenomePercentOnco`% of 
 all human genes (NCBI RefSeq) whereas the mouse oncogene list comprises `r mouseGenomePercentOnco`% of all mouse genes. 
 The frequency of integration sites in human subjects near oncogenes was not significantly different than a published trial 
-using a comparable vector to correct Wiskott-Aldrich syndrome (WAS) from which no adverse events have been reported ^2^. 
-The frequency of integration sites in bone marrow donor mice near oncogenes was generaly less than that of mice in a previously 
+using a comparable vector to correct Wiskott-Aldrich syndrome (WAS) from which no adverse events have been reported^2^. 
+The frequency of integration sites in bone marrow donor mice near oncogenes was generally less than that of mice in a previously 
 published $\beta$-thalassemia mouse trial from which no adverse events have been reported ^3^. The integration position profile 
 for human subjects was very similar to that found in the WAS trial. The mouse bone marrow transplant trials yielded varying degrees 
 of persistence in five of the nine trials where detection was limited due to both sequencing depth and vector copy number. 
-No significant enrichment of integration events near oncogenes was identified between donor and recipient mice.
+No significant enrichment of integration events near oncogenes was identified between donor and recipient mice. The code base 
+for this analysis is available on-line ([link](https://github.com/everettJK/project.geneTherapy.ucsdMouseCystinosis)).
 
 \vspace{0.1cm}
 
@@ -64,15 +65,13 @@ kable(summaryTable,  format = "latex", caption = 'Table 1. Overview of data coll
 # UCSC browser exploration
 UCSC browser sessions pre-loaded with the integration sites identified in this analysis are available via these links: 
 ([human subjects](http://genome.ucsc.edu/cgi-bin/hgTracks?org=human&db=hg38&hgt.customText=http://microb120.med.upenn.edu/UCSC/cherqui/UCSC_CYS_human.ucsc)), 
-([mouse subjects](http://genome.ucsc.edu/cgi-bin/hgTracks?org=mouse&db=mm9&hgt.customText=http://microb120.med.upenn.edu/UCSC/cherqui/UCSC_CYS_mouse.ucsc)). 
-You may have to allow your browser to open a new browser window. Integration sites are shown
-as blue (positive orientation integration) and red (reverse orientation integration) tick marks where the intensity of the color
-reflects the maximum abundance reached by a clone harboring the integration site. Entering a gene name into the search bar
-will direct the browser to specific genes. 
+([mouse subjects](http://genome.ucsc.edu/cgi-bin/hgTracks?org=mouse&db=mm9&hgt.customText=http://microb120.med.upenn.edu/UCSC/cherqui/UCSC_CYS_mouse.ucsc)). You may have to allow your browser to open a new browser window. Integration sites are shown
+as blue (positive orientation integration) and red (reverse orientation integration) tick marks. For each integration site, a second track provides the maximum clonal abundance. Entering gene names into the search bar will direct the browser to specific genes. 
 
 \newpage
 
-# Decription of analysis techniques
+# Description of analysis techniques  
+
 We investigate effects of integration on cell growth using the following criteria:
 Integration Frequency is the frequency at which unique integration sites are observed in or near a given gene.
 Clonal Abundance is determined by quantifying the number of sites of linker ligation associated with each unique integration
@@ -80,8 +79,12 @@ site. This samples the number of DNA chains at the start of the experiment allow
 
 Relative clonal Abundance is determined per sample and is the percentage of identified cells attributed to a given clone.
 Integration sites and the clones harboring them are sampled from a larger population. It would be rare for all integration
-sites in a sample to be represented in the sequence data. Four technical replicates of each delivered sample were prepared,
-sequenced and analyzed with the INSPIIRED integration site analysis pipeline (v1.2)^5^.
+sites in a sample to be represented in the sequence data.  
+  
+For this analysis, four technical replicates of each delivered sample were prepared, sequenced and analyzed with the 
+INSPIIRED integration site analysis pipeline (v1.2)^5^.
+
+\newpage
 
 # Comparisons to previous trials
 
@@ -89,15 +92,14 @@ sequenced and analyzed with the INSPIIRED integration site analysis pipeline (v1
 
 In order to determine if the experimental vector has a higher propensity of integrating near suspected oncogene in humans
 than previously employed vectors, the frequency of integration near oncogenes was compared to a previously published human
-trial 1 which used a comparable lentiviral vector to correct Wiskott-Aldrich syndrome (WAS) where no adverse events have
-been reported to date. The frequency of integration near onco genes in four WAS pre-transplant patient samples was compared
-to the frequency of integration in the experimental day 14 samples (Figure 1 [CYS: gray, WAS: blue], sample details in Table
-S3). The frequencies of integration near oncogenes of samples in this study and the previous WAS study were not significantly
-different (Mann-Whitney U-test p-value: 0.924).
+trial^1^ which used a comparable lentiviral vector to correct Wiskott-Aldrich syndrome (WAS) where no adverse events have
+been reported to date. The frequency of integration near oncogenes in four WAS pre-transplant patient samples was compared
+to the frequency of integration in the experimental day 14 samples (Figure 1 [CYS: gray, WAS: blue]). The frequencies of integration near oncogenes of samples in this study and the previous WAS study were not significantly
+different (Mann-Whitney U-test p-value: `r round(wilcox.test(humanSitesNearOnco$percentNearOnco, wasSitesNearOnco$percentNearOnco, correct = FALSE)$p.value, 3)`).
 
 \vspace{0.1cm}
 
-*Fig. 1. Comparison of frequencies of integration events near oncogenes.*  
+*Figure 1. Comparison of frequencies of integration events near oncogenes.*  
 ```{r fig1, echo = FALSE, fig.height=4}
 WASvsHumanSubjects
 ```
@@ -109,12 +111,11 @@ WASvsHumanSubjects
 \vspace{0.1cm}
 
 In order to determine if the experimental vector has a higher propensity of integrating near suspected oncogene in mice than
-previously employed vectors, the frequency of integration near oncogenes was compared to a previously published mouse trial
-3 which used a comparable lentiviral vector to correct β-thalassemia where no adverse events have been reported to date. The
-frequency of integration events near onco genes in bone marrow donor mice was generally less than the mean frequency of
-integration events near oncogenes in the published trial (Figure 2 [CYS: gray, β-thalassemia trial: blue]).
+previously employed vectors, the frequency of integration near oncogenes was compared to a previously published mouse trial^3^ which used a comparable lentiviral vector to correct $\beta$-thalassemia. The frequency of integration events near onco genes 
+in bone marrow donor mice was generally less than the mean frequency of integration events near oncogenes in the published trial (Figure 2 [CYS: gray, $\beta$-thalassemia trial: blue]).
 
-*Fig 2. Comparison of frequencies of integration events near oncogenes.*  
+*Figure 2. Comparison of frequencies of integration events near oncogenes.*  
+
 ```{r fig2, echo = FALSE, fig.height=4}
 PMC3129560vsMouseSubjects
 ```
@@ -125,45 +126,44 @@ PMC3129560vsMouseSubjects
 Heat maps of identified integration sites are shown below in Figure 3a (human subjects) & 3b (mouse subjects). The integration
 position profile from human subjects is very similar to the profile from the previous WAS study (Figure S2).
 
-*Fig. 3a*  
+*Figure 3a*  
 
 
-```{r fig3a, echo = FALSE, fig.height=6, dev='png', dpi=150, cache=TRUE}
+```{r fig3a, echo = FALSE, fig.height=6, dev='png', dpi=150, cache=FALSE}
 humanIntSiteMap
 ```
 
 \newpage
 
-*Fig. 3b.*  
+*Figure 3b.*  
 
 
-```{r fig3b, echo = FALSE, fig.height=6, dev='png', dpi=150, cache=TRUE}
+```{r fig3b, echo = FALSE, fig.height=6, dev='png', dpi=150, cache=FALSE}
 mouseIntSiteMap
 ```
 
 \newpage
 
-# Relative abundances of human subjects samples
+# Relative abundances of human subject samples
 
 The sample relative abundance plots below (Figure 4) show the most abundant 25 clones in each human sample as colored 
 bars while less abundant clones were relegated to a single low abundance bar shown in gray. Subject DON.002.4.SC 
 showed an expanded clone (30% relative abundance) with an integration event down stream of the non-coding RNA LOC105374704. 
-Subject DON.007.CR showed an expanded clone (15% relative abundance) with three integration events within ZNF337. These two expanded clones 
-are not of immediate concern given that such expanded clones appeared in the WAS trial used for comparison (Figure S1), the large majority of cells 
-identified via the sonic abundance method were from a single technical replicate and both samples contained relatively few inferred cells which inflate 
-relative abundance values. 
+Subject DON.007.CR showed an expanded clone (15% relative abundance) with three integration events within ZNF337. 
+These two expanded clones are not of immediate concern given that such expanded clones appeared in the WAS trial used 
+for comparison (Figure S1) and both samples contained relatively few inferred cells which inflate relative abundance values. 
 
-*Fig. 4.*  
+*Figure 4.*  
 
-```{r fig4, echo=FALSE, eval=TRUE, fig.height=8.25, fig.width=8.5, cache=FALSE}
+```{r fig4, echo=FALSE, eval=TRUE, fig.height=7, Figurewidth=7, cache=FALSE}
 grid.arrange(grobs=humanRelAbundPlots[1:16], ncol=4)
 ```
 
 \newpage
 
-*Fig. 4. (continued)*  
+*Figure 4. (continued)*  
 
-```{r fig4cont, echo=FALSE, eval=TRUE, fig.height=8.25, fig.width=8.5, cache=FALSE}
+```{r fig4cont, echo=FALSE, eval=TRUE, fig.height=7, Figurewidth=7, cache=FALSE}
 grid.arrange(grobs=humanRelAbundPlots[17:length(humanRelAbundPlots)], ncol=4)
 ```
 
@@ -171,13 +171,14 @@ grid.arrange(grobs=humanRelAbundPlots[17:length(humanRelAbundPlots)], ncol=4)
 
 # Expanded clones  
 
-Table 2 below lists integration sites with relatives cell abundances ≥ 20%. These integration events may be driving cell
-division and follow-up longitudinal studies may be warranted.  
+Table 2 below lists integration sites with relatives cell abundances $\geq$ 20%. These integration events may be driving cell
+division and follow-up longitudinal studies may be warranted. The estimated number of cells harboring each integration 
+(estAbund) is shown for context. 
 
 
-*Table 2*  
+*Table 2.*  
 
-```{r table2, echo=FALSE, eval=TRUE, cache=TRUE, results='asis'}
+```{r table2, echo=FALSE, eval=TRUE, cache=FALSE, results='asis'}
 kable(abundantClones20, format = "latex", linesep = "", booktabs = T) %>% kable_styling(latex_options = c("striped", "scale_down"))
 ```
 
@@ -186,29 +187,29 @@ kable(abundantClones20, format = "latex", linesep = "", booktabs = T) %>% kable_
 # Mouse transplant trials  
 
 The positions of identified integration sites from cell transplant trials with nine pairs of mice are shown in Figure 5a (donor
-mice) and Figure 5b (recipient mice). The gRxCluster software package (link) did not identify clusters of integration sites
-between donor and recipient mice with a false discovery rate of ≤ 10%.
+mice) and Figure 5b (recipient mice). The gRxCluster software package did not identify clusters of integration sites
+between donor and recipient mice with a false discovery rate of $\leq$ 10%.
 The relative clonal abundances of samples from the transplant trials are shown in Figure 6 where donor mice are shown on
 the left and recipient mice are shown on the right. Integration sites are denoted by both nearest gene and genomic coordinate
 and annotated with an asterisk (*) if located within transcription units and with a tilda (~) if the nearest gene is considered
 an oncogene. Below each abundance plot is a Fisher’s exact test for the enrichment of oncogenes. None of the tests returned
-a significant result. The clonal abundances of clones found in both donor and recipient mice is shown in Table S4. The
+a significant result. The clonal abundances of clones found in both donor and recipient mice is shown in Table S3. The
 identification of relatively few persistent clones is likely due to sequencing experiments sampling only a subset of existing
 integration sites and a number of samples with low vector copy numbers (Figures 5B & S3).  
 
-*Fig. 5*  
+*Figure 5*  
 
-```{r transplantSites, echo=FALSE, fig.width=11, fig.height=6, cache=TRUE}
+```{r transplantSites, echo=FALSE, Figurewidth=11, fig.height=6, cache=FALSE}
 grid.arrange(mouseDonorIntSiteMap + ggtitle('A'), mouseRecipientIntSiteMap + ggtitle('B'), ncol=2)
 ```
 
 \newpage
 
 
-```{r, echo=FALSE, fig.height=5, results='asis', cache=TRUE}
+```{r, echo=FALSE, fig.height=5, results='asis', cache=FALSE}
 n <- 1
 for(i in 1:length(transferTrials)){
-  cat(paste0('Fig. 6', letters[n], '.\n\n'))
+  cat(paste0('Figure 6', letters[n], '.\n\n'))
   n <- n+1
   print(transferTrials[[i]][[1]])
   cat('\n\\vspace{1.0cm}\n')
@@ -221,7 +222,7 @@ for(i in 1:length(transferTrials)){
 \newpage
 
 **Analyst**    
-```{r echo=FALSE, fig.width=1}
+```{r echo=FALSE, Figurewidth=1}
 knitr::include_graphics('./data/Everett_signature.png')
 ```
    
@@ -230,7 +231,7 @@ John K. Everett, Ph.D.
 \vspace{0.5cm}
 
 **Laboratory director**    
-```{r echo=FALSE, fig.width=1}
+```{r echo=FALSE, Figurewidth=1}
 knitr::include_graphics('./data/Bushman_signature.png')
 ```
    
@@ -275,14 +276,14 @@ Drake MJ, Bates P, Hacein-Bey-Abina S, Cavazzana M, Bushman FD. Mol Ther Methods
 ## Numbers of inferred cells and integration sites identified in provided samples
 
 *Table S1.*  
-```{r tableS1, echo=FALSE, eval=TRUE, cache=TRUE}
+```{r tableS1, echo=FALSE, eval=TRUE, cache=FALSE}
 kable(sampleSummary[1:30,], format = "latex", linesep = "", booktabs = T) %>% kable_styling(latex_options = c("striped", "scale_down"))
 ```
 
 \newpage
 
-*Table S1 (continued)*  
-```{r tableS1c, echo=FALSE, eval=TRUE, cache=TRUE}
+*Table S1 (continued).*  
+```{r tableS1c, echo=FALSE, eval=TRUE, cache=FALSE}
 kable(sampleSummary[31:nrow(sampleSummary),], format = "latex", linesep = "", booktabs = T) %>% kable_styling(latex_options = c("striped", "scale_down"))
 ```
 
@@ -290,8 +291,8 @@ kable(sampleSummary[31:nrow(sampleSummary),], format = "latex", linesep = "", bo
 
 ## Analyzed samples in which no integration sites were identified  
 
-*Table S2*  
-```{r tableS2, echo=FALSE, eval=TRUE, cache=TRUE}
+*Table S2.*  
+```{r tableS2, echo=FALSE, eval=TRUE, cache=FALSE}
 kable(failedSampleTable, format = "latex", linesep = "", booktabs = T) %>% kable_styling(latex_options = c("striped", "scale_down"))
 ```
 
@@ -299,12 +300,11 @@ kable(failedSampleTable, format = "latex", linesep = "", booktabs = T) %>% kable
 
 ## Comparison of the number of integration sites and inferred cells  
 
-Kolmogorov–Smirnov tests show no significant difference between the curves in the plot.
-The plot was truncated at 100 inferred cells for clarity which eliminated 16 data points from the ‘WAS m12’ plot.  
+Kolmogorov–Smirnov tests show no significant differences between the distributions of estimated abundances between trials. The plot below was truncated at 100 inferred cells for clarity which eliminated 16 data points from the ‘WAS m12’ distriubtion.  
 
-*Fig. S1.*   
+*Figure S1.*   
   
-```{r FigS1, echo=FALSE, eval=TRUE, fig.height=6, cache=TRUE, warning=FALSE}
+```{r FigS1, echo=FALSE, eval=TRUE, fig.height=6, cache=FALSE, warning=FALSE}
 intSiteFragPlot
 ```
 
@@ -312,19 +312,19 @@ intSiteFragPlot
 
 ## Integration positions of the lentiviral theraputic vector from a previous WAS correction trial^1^  
 
-*Fig. S2.*   
+*Figure S2.*   
   
-```{r FigS2, echo=FALSE, eval=TRUE, fig.height=6, cache=TRUE}
+```{r FigS2, echo=FALSE, eval=TRUE, fig.height=6, cache=FALSE}
 WASintSites_d0_map
 ```
 
 \newpage
 
-## Persistance of clones in mouse BM transplant trials  
+## Persistence of clones in mouse BM transplant trials  
 
 *Table S3.*   
   
-```{r TableS3, echo=FALSE, eval=TRUE,  cache=TRUE}
+```{r TableS3, echo=FALSE, eval=TRUE,  cache=FALSE}
 kable(cellTransfer_intSites_table, format = "latex", linesep = "", booktabs = T) %>% kable_styling(latex_options = c("striped", "scale_down"))
 ```
 
@@ -333,8 +333,8 @@ kable(cellTransfer_intSites_table, format = "latex", linesep = "", booktabs = T)
 ## Sequencing depth
 Identified integration site are shown as colored squares that are positioned by the number of reads leading to their identification.  
 
-*Fig. S3.*   
+*Figure S3.*   
   
-```{r FigS3, echo=FALSE, eval=TRUE, fig.height=8, cache=TRUE, dev='png', dpi=150}
+```{r FigS3, echo=FALSE, eval=TRUE, fig.height=8, cache=FALSE, dev='png', dpi=150}
 intSiteReadsPlot
 ```
